# contract_constructor_public

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: nodes_description.md
src/: alembic.ini  cli_actualize_db.py  cli_create_superuser.py  cli_demo_project.py  config.py  main.py
src/admin_panel/: auth_admin.py  interface.py
src/auth/: access_checker.py  auth_router.py  auth_shemas.py  auth_uc.py  key_tools.py
src/background/: tasks.py
src/converter/: html_docx_converter.py
src/db_connect/: connect.py
src/graph_processing/: graph.py  graph_encoder.py  graph_schemas.py
src/migrations/: env.py
src/migrations/versions/: 2023_08_24_01-37-7be1017f1d8c_first_migration.py  2023_09_30_09-49-6c04e78ea90e_add_demo_users_migration.py
src/models/: models.py  models_events.py
src/routers/: doc_router.py  form_router.py  node_router.py  project_router.py  template_router.py
src/schemas/: doc_chemas.py  form_schemas.py  node_schemas.py  project_schemas.py  template_schemas.py
src/shared/: base_input_dto.py  base_usecase.py  common_schemas.py  error_structure.py  exception_handlers.py  file_transporter.py  project_loader.py  time_utils.py
src/usecases/: doc_uc.py  form_uc.py  node_uc.py  project_uc.py  template_uc.py
tests/: test_graph_fail.py  test_graph_success.py
